[fix] 优化